--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
     "he": "^1.2.0",
     "libphonenumber-js": "^1.12.9",
     "lottie-react": "^2.4.1",
     "next": "15.3.3",
-    "nodemailer": "^7.0.3",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.13",
     "ogl": "^1.0.11",
     "pg": "^8.16.0",
     "react": "^19.0.0",
