--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,16 @@
-- type: cron
-  name: main-scrapers
-  schedule: "0 */3 * * *"
-  env: python
-  plan: free
-  buildCommand: pip install -r requirements.txt
-  startCommand: ./run_scraper.sh
+cronJobs:
+  - type: cron
+    name: main-scrapers
+    schedule: "0 */3 * * *"
+    env: python
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: ./run_scraper.sh
 
-- type: cron
-  name: yt-scraper
-  schedule: "0 0 */3 * *"
-  env: python
-  plan: free
-  buildCommand: pip install -r requirements.txt
-  startCommand: ./fetch_trailers.sh
+  - type: cron
+    name: yt-scraper
+    schedule: "0 0 */3 * *"
+    env: python
+    plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: ./fetch_trailers.sh
