--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
